Updating data and code

--- a/src/app.ipynb
+++ b/src/app.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-20T23:28:39.221883Z",
-     "start_time": "2018-09-20T23:28:38.887900Z"
+     "end_time": "2018-09-28T06:01:59.692224Z",
+     "start_time": "2018-09-28T06:01:59.076708Z"
     }
    },
    "outputs": [],
@@ -28,9 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-28T06:02:00.485705Z",
+     "start_time": "2018-09-28T06:02:00.471177Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-8d4716d09dd0>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-8d4716d09dd0>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    status =\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def get_info(url):\n",
     "    driver = webdriver.Firefox()\n",
@@ -44,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-19T21:43:05.151774Z",
-     "start_time": "2018-09-19T21:42:59.964000Z"
+     "end_time": "2018-09-28T06:02:03.308615Z",
+     "start_time": "2018-09-28T06:02:03.295267Z"
     }
    },
    "outputs": [],
@@ -58,51 +72,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-19T21:43:13.560749Z",
-     "start_time": "2018-09-19T21:43:13.540158Z"
+     "end_time": "2018-09-28T06:02:04.231045Z",
+     "start_time": "2018-09-28T06:02:04.127674Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-886ead46232a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'info' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-28T06:05:31.351092Z",
+     "start_time": "2018-09-28T06:05:31.334681Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-28T06:07:49.098772Z",
+     "start_time": "2018-09-28T06:07:49.080898Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "while i>0:\n",
+    "    a = []\n",
+    "    a.append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-28T06:07:49.915349Z",
+     "start_time": "2018-09-28T06:07:49.899294Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['3 bds · 2 ba · 1,042 sqft',\n",
-       " '4 bds · 2 ba · 1,358 sqft',\n",
-       " '3 bds · 2 ba · 1,281 sqft',\n",
-       " '5 bds · 5 ba · 3,815 sqft',\n",
-       " '3 bds · 3 ba · 1,767 sqft',\n",
-       " '5 bds · 4 ba · 2,243 sqft',\n",
-       " '3 bds · 3 ba · 1,528 sqft',\n",
-       " '3 bds · 3 ba · 1,512 sqft',\n",
-       " '4 bds · 2 ba · 1,854 sqft',\n",
-       " '3 bds · 2 ba · 1,102 sqft',\n",
-       " '2 bds · 3 ba · 1,459 sqft',\n",
-       " '2 bds · 1 ba · 882 sqft',\n",
-       " '4 bds · 3 ba · 1,626 sqft',\n",
-       " '6 bds · 7 ba · 6,682 sqft',\n",
-       " '3 bds · 3 ba · 1,550 sqft',\n",
-       " '5 bds · 3 ba · 5,000 sqft',\n",
-       " '4 bds · 2 ba · 1,666 sqft',\n",
-       " '5 bds · 3 ba · 2,697 sqft',\n",
-       " '2 bds · 1 ba · 842 sqft',\n",
-       " '3 bds · 2 ba · 1,838+ sqft',\n",
-       " '4 bds · 2 ba · 1,208 sqft',\n",
-       " '4 bds · 3 ba · 1,988 sqft',\n",
-       " '6 bds · 4 ba · 2,573 sqft',\n",
-       " '4 bds · 3 ba · 1,824 sqft',\n",
-       " '6 bds · 3 ba · 3,376 sqft']"
+       "array(1.1643169)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info"
+    "a"
    ]
   },
   {
