almost done extracting

--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -2,15 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-29T04:30:08.547122Z",
-     "start_time": "2018-09-29T04:30:08.536180Z"
+     "end_time": "2018-09-29T18:06:10.220667Z",
+     "start_time": "2018-09-29T18:06:10.209362Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "\n",
+    "home_address_MLS = 'Ortega (jose) Elementary SchoolPublic • K to 5 • Serves this homeGreatSchools Rating: 7/10Parent Rating: '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-29T18:18:47.444934Z",
+     "start_time": "2018-09-29T18:18:47.434772Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# home_dict = dict()\n",
+    "\n",
+    "# add_list = text.split(sep=' |')\n",
+    "# zip_code = re.search('\\d+$', add_list[0])\n",
+    "# mls_num = re.search('\\d+$', add_list[1])\n",
+    "# home_add = re.search('(.+?),', home_address_MLS)\n",
+    "# home_city = re.search(', (.+?),', home_address_MLS)\n",
+    "# home_state = add_list[0].replace(home_add.group(1),'').replace(\n",
+    "#     home_city.group(1),'').replace(zip_code.group(),'').replace(\n",
+    "#     ',','').replace(' ','')\n",
+    "\n",
+    "# home_dict['address'] = home_add.group(1)\n",
+    "# home_dict['city'] = home_city.group(1)\n",
+    "# home_dict['zip_code'] = zip_code.group()\n",
+    "# home_dict['state'] = home_state\n",
+    "# home_dict['mls_num'] = mls_num.group()\n",
+    "\n",
+    "# home_dict"
+   ]
   },
   {
    "cell_type": "code",
