--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -116,28 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-01T19:42:57.141828Z",
-     "start_time": "2018-10-01T19:42:57.127217Z"
+     "end_time": "2018-10-01T23:05:24.885147Z",
+     "start_time": "2018-10-01T23:05:23.496286Z"
     }
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyzipcode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-174-d2760e6d944d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpyzipcode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyzipcode'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input home link: boigfa\n",
+      "boigfa\n"
      ]
     }
    ],
    "source": [
-    "import pyzipcode"
+    "home_link = input(\"Please input home link: \")\n"
    ]
   },
   {
