--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-29T18:20:30.190122Z",
-     "start_time": "2018-09-29T18:20:30.180866Z"
+     "end_time": "2018-10-01T23:24:19.607053Z",
+     "start_time": "2018-10-01T23:24:19.598120Z"
     }
    },
    "outputs": [],
    "source": [
     "import re\n",
+    "import random\n",
     "\n",
     "school = 'Ortega (jose) Elementary SchoolPublic • K to 5 • Serves this homeGreatSchools Rating: 7/10Parent Rating: '"
    ]
@@ -135,6 +136,45 @@
    ],
    "source": [
     "home_link = input(\"Please input home link: \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-01T23:25:04.093816Z",
+     "start_time": "2018-10-01T23:25:04.084283Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "b = random.uniform(2,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-01T23:25:04.241327Z",
+     "start_time": "2018-10-01T23:25:04.229711Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.588436069107048"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
