--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -334,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 458,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:08:03.144505Z",
-     "start_time": "2018-10-02T19:08:03.110713Z"
+     "end_time": "2018-10-02T19:37:32.442197Z",
+     "start_time": "2018-10-02T19:37:32.416153Z"
     }
    },
    "outputs": [],
@@ -376,20 +376,20 @@
     "        a = num.text\n",
     "        price_list.extend(re.findall(price_regex, a))\n",
     "        home_dict['num_beds'] = float((re.findall(bed_regex, a))[0].replace(\n",
-    "            'Bed','').replace(' ',''))\n",
+    "            'Bed', '').replace(' ', ''))\n",
     "        home_dict['num_baths'] = float((re.findall(bath_regex, a))[0].replace(\n",
-    "            'Bath','').replace(' ',''))\n",
+    "            'Bath', '').replace(' ', ''))\n",
     "        home_dict['home_sqft'] = float((re.findall(size_regex, a))[0].replace(\n",
-    "            'Sq','').replace(' ','').replace(':',''))\n",
+    "            'Sq', '').replace(' ', '').replace(':', ''))\n",
     "        home_dict['yr_blt'] = int((re.findall(yr_blt_regex, a))[0].replace(\n",
-    "            'Built','').replace(' ','').replace(':',''))\n",
+    "            'Built', '').replace(' ', '').replace(':', ''))\n",
     "        home_dict['status'] = (re.findall(status_regex, a))[0].replace(\n",
-    "            'Status','').replace(' ','').replace(':','')\n",
+    "            'Status', '').replace(' ', '').replace(':', '')\n",
     "\n",
     "    home_dict['redfin_est'] = float([num for num in price_list if 'Redfin' in num\n",
-    "                                    ][0].replace('Redfin ','').replace('$','').replace(',',''))\n",
+    "                                     ][0].replace('Redfin ', '').replace('$', '').replace(',', ''))\n",
     "    home_dict['sold_price'] = float([num for num in price_list if 'Last' in num\n",
-    "                                    ][0].replace('Last ','').replace('$','').replace(',',''))\n",
+    "                                     ][0].replace('Last ', '').replace('$', '').replace(',', ''))\n",
     "\n",
     "    home_description = soup.find('p', {'class': 'font-b1'})\n",
     "    home_dict['description'] = home_description.span.text\n",
@@ -403,39 +403,57 @@
     "\n",
     "    school_info = soup.findAll('div', {'class': \"name-and-info\"})\n",
     "    schools = [num.text for num in school_info]\n",
-    "    for school in schools:\n",
-    "        if ('Elementary' and 'Public') in school:\n",
-    "            elementary_school = school.split(sep=' •')\n",
-    "            home_dict['elem_school_name'] = elementary_school[0][:-5]\n",
-    "            home_dict['elem_school_grades'] = elementary_school[1]\n",
-    "            home_dict['elem_school_rating'] = elementary_school[2]\n",
-    "        elif (('Middle' or 'Junior') and 'Public') in school:\n",
-    "            middle_school = school.split(sep=' •')\n",
-    "            home_dict['middle_school_name'] = elementary_school[0][:-5]\n",
-    "            home_dict['middle_school_grades'] = elementary_school[1]\n",
-    "            home_dict['middle_school_rating'] = elementary_school[2]\n",
-    "        elif ('9 to 12' and 'Public') in school:\n",
-    "            high_school = school.split(sep=' •')\n",
-    "            home_dict['high_school_name'] = elementary_school[0][:-5]\n",
-    "            home_dict['high_school_grades'] = elementary_school[1]\n",
-    "            home_dict['high_school_rating'] = elementary_school[2]\n",
     "\n",
-    "#     rating = re.findall('(\\d+)', add_list[-1])\n",
-    "#     rating = '/'.join([num for num in rating])\n",
-    "#     school_name = add_list[0]\n",
-    "#     if 'Public' in school_name:\n",
-    "#         print(school_name.replace('Public',''))\n",
+    "    if ('Public') in schools[0]:\n",
+    "        es = schools[0]\n",
+    "        elementary_school = es.split(sep=' •')\n",
+    "        home_dict['elem_school_name'] = elementary_school[0][:-6]\n",
+    "        home_dict['elem_school_grades'] = elementary_school[1]\n",
+    "        home_dict['elem_school_rating'] = re.findall('(\\d+)', elementary_school[2])[0]\n",
+    "    else:\n",
+    "        es = schools[1]\n",
+    "        elementary_school = es.split(sep=' •')\n",
+    "        home_dict['elem_school_name'] = elementary_school[0][:-6]\n",
+    "        home_dict['elem_school_grades'] = elementary_school[1]\n",
+    "        home_dict['elem_school_rating'] = re.findall('(\\d+)', elementary_school[2])[0]\n",
+    "    \n",
+    "    if (('Middle' or 'Junior') and 'Public') in schools[1]:\n",
+    "        ms = schools[1]\n",
+    "        middle_school = ms.split(sep=' •')\n",
+    "        home_dict['middle_school_name'] = middle_school[0][:-6]\n",
+    "        home_dict['middle_school_grades'] = middle_school[1]\n",
+    "        home_dict['middle_school_rating'] = re.findall('(\\d+)', middle_school[2])[0]\n",
+    "    else:\n",
+    "        ms = schools[2]\n",
+    "        middle_school = ms.split(sep=' •')\n",
+    "        home_dict['middle_school_name'] = middle_school[0][:-6]\n",
+    "        home_dict['middle_school_grades'] = middle_school[1]\n",
+    "        home_dict['middle_school_rating'] = re.findall('(\\d+)', middle_school[2])[0]\n",
     "\n",
-    "    return home_dict, feats, schools"
+    "#     if ('9 to 12' and 'Public') in schools[2]:\n",
+    "#         hs = schools[2]\n",
+    "#         high_school = hs.split(sep=' •')\n",
+    "#         home_dict['high_school_name'] = high_school[0][:-6]\n",
+    "#         home_dict['high_school_grades'] = high_school[1]\n",
+    "#         home_dict['high_school_rating'] = high_school[2]\n",
+    "#     else:\n",
+    "#         hs = schools[3]\n",
+    "#         high_school = hs.split(sep=' •')\n",
+    "#         home_dict['high_school_name'] = high_school[0][:-6]\n",
+    "#         home_dict['high_school_grades'] = high_school[1]\n",
+    "#         home_dict['high_school_rating'] = high_school[2]\n",
+    "\n",
+    "\n",
+    "    return home_dict, feats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 470,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:00:55.123346Z",
-     "start_time": "2018-10-02T19:00:52.263461Z"
+     "end_time": "2018-10-02T19:38:45.860040Z",
+     "start_time": "2018-10-02T19:38:44.027464Z"
     }
    },
    "outputs": [
@@ -443,7 +461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97.90.251.228:8080\n"
+      "216.21.161.185:48560\n",
+      "https://www.redfin.com/NH/Manchester/276-Huse-Rd-03103/home/88246766\n"
      ]
     }
    ],
@@ -454,38 +473,45 @@
     "# url = random.sample(active_url_list, 1)[0]\n",
     "url = random.sample(sold_url_list, 1)[0]\n",
     "print(proxy)\n",
+    "print(url)\n",
     "\n",
-    "home_dict, feats, schools = each_property(url, header, proxy)"
+    "home_dict, feats = each_property(url, header, proxy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 471,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:00:55.144582Z",
-     "start_time": "2018-10-02T19:00:55.125222Z"
+     "end_time": "2018-10-02T19:38:45.876421Z",
+     "start_time": "2018-10-02T19:38:45.861819Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'address': '9080 162nd Place NE',\n",
-       " 'city': ' Redmond',\n",
-       " 'zip_code': '98052',\n",
-       " 'state': 'WA',\n",
-       " 'num_beds': 2.0,\n",
-       " 'num_baths': 2.5,\n",
-       " 'home_sqft': 430.0,\n",
-       " 'yr_blt': 1997,\n",
-       " 'status': 'Sold',\n",
-       " 'redfin_est': 688894.0,\n",
-       " 'sold_price': 690033.0,\n",
-       " 'description': 'Stainless steel appliances, granite counters, ceiling fans, slate and wood laminate floors! Outstanding opportunity in this highly sought after neighborhood with excellent schools. Lush and protected back patio surrounded by green plantings and trees. Gas forced air heat, a slate appointed gas fireplace. Location, location! Adjacent to the Sammamish River Trail, shops, restaurants, movies and more! '}"
+       "{'address': '276 Huse Rd',\n",
+       " 'city': ' Manchester',\n",
+       " 'zip_code': '03103',\n",
+       " 'state': 'NH',\n",
+       " 'num_beds': 3.0,\n",
+       " 'num_baths': 2.25,\n",
+       " 'home_sqft': 201.0,\n",
+       " 'yr_blt': 1972,\n",
+       " 'status': 'Closed',\n",
+       " 'redfin_est': 299567.0,\n",
+       " 'sold_price': 297000.0,\n",
+       " 'description': 'Come see this neat as a pin split home with curb appeal to spare! This home has a sapcious floor plan with three good sized bedrooms including a master having a 3/4 bath off it on the first floor. The finshed lower leverl offers another bedroom, additional finished area and a beautiful fireplace. The home also features gleaming hardwood floors, a super inviting three season porch and an amazing . 7 acre lot and a two car garage to name a few of the items that make this a must see.  ',\n",
+       " 'elem_school_name': 'Green Acres School',\n",
+       " 'elem_school_grades': ' Preschool to 5',\n",
+       " 'elem_school_rating': '5',\n",
+       " 'middle_school_name': 'Henry J. McLaughlin Middle School',\n",
+       " 'middle_school_grades': ' 6 to 8',\n",
+       " 'middle_school_rating': '1'}"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,29 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:01:22.149294Z",
-     "start_time": "2018-10-02T19:01:22.130060Z"
+     "end_time": "2018-10-02T19:31:55.412263Z",
+     "start_time": "2018-10-02T19:31:52.407Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Norman Rockwell Elementary SchoolPublic • K to 5 • Serves this homeGreatSchools Rating: 9/10Parent Rating: ',\n",
-       " 'Redmond Middle SchoolPublic • 6 to 9 • Serves this homeGreatSchools Rating: 6/10Parent Rating: ',\n",
-       " 'Redmond High SchoolPublic • 9 to 12 • Serves this homeGreatSchools Rating: 10/10Parent Rating: ']"
-      ]
-     },
-     "execution_count": 396,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "schools"
+    "schools[0]"
    ]
   },
   {
