--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -235,6 +235,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "home_facts = =\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
