--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -334,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 472,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:37:32.442197Z",
-     "start_time": "2018-10-02T19:37:32.416153Z"
+     "end_time": "2018-10-02T20:07:04.296106Z",
+     "start_time": "2018-10-02T20:07:04.271087Z"
     }
    },
    "outputs": [],
@@ -368,23 +368,37 @@
     "    home_dict['city'] = home_city.group(1)\n",
     "    home_dict['zip_code'] = zip_code.group()\n",
     "    home_dict['state'] = home_state\n",
-    "    #home_dict['mls_num'] = mls_num.group()\n",
+    "    home_dict['mls_num'] = mls_num.group()\n",
     "\n",
-    "    all_top = soup.findAll('div', {'class': 'HomeInfo inline-block'})\n",
-    "    price_list = []\n",
-    "    for num in all_top:\n",
-    "        a = num.text\n",
-    "        price_list.extend(re.findall(price_regex, a))\n",
-    "        home_dict['num_beds'] = float((re.findall(bed_regex, a))[0].replace(\n",
-    "            'Bed', '').replace(' ', ''))\n",
-    "        home_dict['num_baths'] = float((re.findall(bath_regex, a))[0].replace(\n",
-    "            'Bath', '').replace(' ', ''))\n",
-    "        home_dict['home_sqft'] = float((re.findall(size_regex, a))[0].replace(\n",
-    "            'Sq', '').replace(' ', '').replace(':', ''))\n",
-    "        home_dict['yr_blt'] = int((re.findall(yr_blt_regex, a))[0].replace(\n",
-    "            'Built', '').replace(' ', '').replace(':', ''))\n",
-    "        home_dict['status'] = (re.findall(status_regex, a))[0].replace(\n",
-    "            'Status', '').replace(' ', '').replace(':', '')\n",
+    "    all_info = soup.findAll('div', {'data-rf-test-id': 'publicRecords'})\n",
+    "    label_list = []\n",
+    "    values_list = []\n",
+    "    for num in all_info:\n",
+    "        cats = num.findAll('span', {'class': 'table-label'})\n",
+    "        for i in cats:\n",
+    "            label_list.append(i.text)\n",
+    "    for num in all_info:\n",
+    "        vals = num.findAll('div', {'class': 'table-value'})\n",
+    "        for i in vals:\n",
+    "            values_list.append(i.text)\n",
+    "    new_dict = dict(zip(label_list, values_list))\n",
+    "    \n",
+    "    \n",
+    "#     all_top = soup.findAll('div', {'class': 'HomeInfo inline-block'})\n",
+    "#     price_list = []\n",
+    "#     for num in all_top:\n",
+    "#         a = num.text\n",
+    "#         price_list.extend(re.findall(price_regex, a))\n",
+    "#         home_dict['num_beds'] = float((re.findall(bed_regex, a))[0].replace(\n",
+    "#             'Bed', '').replace(' ', ''))\n",
+    "#         home_dict['num_baths'] = float((re.findall(bath_regex, a))[0].replace(\n",
+    "#             'Bath', '').replace(' ', ''))\n",
+    "#         home_dict['home_sqft'] = float((re.findall(size_regex, a))[0].replace(\n",
+    "#             'Sq', '').replace(' ', '').replace(':', ''))\n",
+    "#         home_dict['yr_blt'] = int((re.findall(yr_blt_regex, a))[0].replace(\n",
+    "#             'Built', '').replace(' ', '').replace(':', ''))\n",
+    "#         home_dict['status'] = (re.findall(status_regex, a))[0].replace(\n",
+    "#             'Status', '').replace(' ', '').replace(':', '')\n",
     "\n",
     "    home_dict['redfin_est'] = float([num for num in price_list if 'Redfin' in num\n",
     "                                     ][0].replace('Redfin ', '').replace('$', '').replace(',', ''))\n",
@@ -429,6 +443,8 @@
     "        home_dict['middle_school_name'] = middle_school[0][:-6]\n",
     "        home_dict['middle_school_grades'] = middle_school[1]\n",
     "        home_dict['middle_school_rating'] = re.findall('(\\d+)', middle_school[2])[0]\n",
+    "        \n",
+    "    home_info = {**home_dict, **all_info}\n",
     "\n",
     "#     if ('9 to 12' and 'Public') in schools[2]:\n",
     "#         hs = schools[2]\n",
@@ -444,16 +460,17 @@
     "#         home_dict['high_school_rating'] = high_school[2]\n",
     "\n",
     "\n",
-    "    return home_dict, feats"
+    "\n",
+    "    return home_info, feats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 473,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:38:45.860040Z",
-     "start_time": "2018-10-02T19:38:44.027464Z"
+     "end_time": "2018-10-02T20:07:09.915039Z",
+     "start_time": "2018-10-02T20:07:05.147531Z"
     }
    },
    "outputs": [
@@ -461,8 +478,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "216.21.161.185:48560\n",
-      "https://www.redfin.com/NH/Manchester/276-Huse-Rd-03103/home/88246766\n"
+      "108.29.37.161:59481\n",
+      "https://www.redfin.com/TX/Frisco/8451-Moore-St-75034/home/31654766\n"
      ]
     }
    ],
@@ -475,63 +492,65 @@
     "print(proxy)\n",
     "print(url)\n",
     "\n",
-    "home_dict, feats = each_property(url, header, proxy)"
+    "home_dict, feats, all_info = each_property(url, header, proxy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 499,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T19:38:45.876421Z",
-     "start_time": "2018-10-02T19:38:45.861819Z"
+     "end_time": "2018-10-02T20:44:17.696770Z",
+     "start_time": "2018-10-02T20:44:17.678870Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'address': '8451 Moore St', 'city': ' Frisco', 'zip_code': '75034', 'state': 'TX', 'num_beds': 4.0, 'num_baths': 4.0, 'home_sqft': 210.0, 'yr_blt': 2007, 'status': 'Sold', 'redfin_est': 380559.0, 'sold_price': 379000.0, 'description': 'Luxury Townhome in Frisco Square! Grand entry with two story ceiling and iron spindle staircase. Open layout with stunning finish out including extensive wood flooring on first floor, tall ceilings, and decorative lighting. Gourmet kitchen offers granite counter tops, stainless appliances, gas cook top and ample storage space. Open family room with built-in entertainment center and stone fireplace. Huge master suite with spa like bath and walk-in closet. Spacious game room and oversized bedrooms all with private bathrooms. 2 Car Garage! Luxury amenities and carefree living in the heart of Frisco. Easy hwy access and shops  &  entertainment within walking distance! ', 'elem_school_name': 'Bright Elementary School', 'elem_school_grades': ' K to 5', 'elem_school_rating': '2', 'middle_school_name': 'Staley Middle School', 'middle_school_grades': ' 6 to 8', 'middle_school_rating': '7', 'Beds': '4', 'Baths': '4', 'Sq. Ft.': '3,210', 'Stories': '2', 'Lot Size': '—', 'Style': 'Townhouse', 'Year Built': '2007', 'Year Renovated': '2007', 'County': 'Collin County', 'APN': 'R86530F601401'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_list = []\n",
+    "values_list = []\n",
+    "for num in all_info:\n",
+    "    cats = num.findAll('span', {'class': 'table-label'})\n",
+    "    for i in cats:\n",
+    "        label_list.append(i.text)\n",
+    "for num in all_info:\n",
+    "    vals = num.findAll('div', {'class': 'table-value'})\n",
+    "    for i in vals:\n",
+    "        values_list.append(i.text)\n",
+    "new_dict = dict(zip(label_list, values_list))\n",
+    "print({**home_dict, **new_dict})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-02T20:07:53.415882Z",
+     "start_time": "2018-10-02T20:07:53.400500Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'address': '276 Huse Rd',\n",
-       " 'city': ' Manchester',\n",
-       " 'zip_code': '03103',\n",
-       " 'state': 'NH',\n",
-       " 'num_beds': 3.0,\n",
-       " 'num_baths': 2.25,\n",
-       " 'home_sqft': 201.0,\n",
-       " 'yr_blt': 1972,\n",
-       " 'status': 'Closed',\n",
-       " 'redfin_est': 299567.0,\n",
-       " 'sold_price': 297000.0,\n",
-       " 'description': 'Come see this neat as a pin split home with curb appeal to spare! This home has a sapcious floor plan with three good sized bedrooms including a master having a 3/4 bath off it on the first floor. The finshed lower leverl offers another bedroom, additional finished area and a beautiful fireplace. The home also features gleaming hardwood floors, a super inviting three season porch and an amazing . 7 acre lot and a two car garage to name a few of the items that make this a must see.  ',\n",
-       " 'elem_school_name': 'Green Acres School',\n",
-       " 'elem_school_grades': ' Preschool to 5',\n",
-       " 'elem_school_rating': '5',\n",
-       " 'middle_school_name': 'Henry J. McLaughlin Middle School',\n",
-       " 'middle_school_grades': ' 6 to 8',\n",
-       " 'middle_school_rating': '1'}"
+       "[<div class=\"sectionContainer\" data-rf-test-id=\"publicRecords\"><h2 class=\"h2 inline-block\">Public Facts<span class=\"adr\" itemprop=\"address\" itemscope=\"\" itemtype=\"http://schema.org/PostalAddress\"><span> for </span><span class=\"street-address\" itemprop=\"streetAddress\">8451 Moore Street</span></span></h2><div class=\"main-content\"><div class=\"public-records-taxes\"><div class=\"taxable-value\"><h3 class=\"h3\">Taxable Value</h3><div class=\"tax-values\"><div class=\"tax-table\"><table><tbody><tr><td class=\"heading\">Land</td><td class=\"value\">N/A</td></tr><tr><td class=\"heading\">Additions</td><td class=\"value\">N/A</td></tr><tr class=\"line\"><td class=\"heading\">Total</td><td class=\"value\">N/A</td></tr></tbody></table></div></div></div><div class=\"tax-record\"><h3 class=\"h3\">Tax Record</h3><div class=\"tax-values gray-border\"><div class=\"tax-table totals\"><table><tbody><tr><td class=\"header padded\">2017</td><td class=\"value padded font-weight-bold\">$8,016</td></tr></tbody></table></div></div></div></div><div class=\"basic-info\" id=\"basicInfo\"><div><h3 class=\"h3 home-facts-title\">Home Facts</h3><div class=\"edit-facts-button-container\"><div class=\"edit-facts-button\"><button class=\"button Button tertiary v3\" tabindex=\"0\" type=\"button\"><div class=\"with-text svg-icon\"><svg class=\"SvgIcon rfSvg edit\"><svg viewbox=\"0 0 24 24\"><g fill-rule=\"evenodd\"><path d=\"M22.224 3.022l-1.17-1.172c-1.135-1.133-3.11-1.133-4.244 0L2.278 16.382a1.238 1.238 0 0 0-.342.639l-.912 4.557a1.25 1.25 0 0 0 1.224 1.497l4.806-.937c.243-.05.463-.167.638-.342L22.225 7.264a3.005 3.005 0 0 0 0-4.242zm-6.793 3.035l2.586 2.586-9.586 9.586-2.586-2.586 9.586-9.586zM3.206 20.869l.646-3.233.58-.58 2.585 2.587-.579.578-3.232.648zM20.81 5.849l-1.379 1.38-2.586-2.586 1.38-1.38a1.02 1.02 0 0 1 1.413 0l1.171 1.173c.39.39.39 1.024.001 1.414z\"></path></g></svg></svg></div><span>Edit Facts</span></button></div></div></div><div class=\"median-values\"><div class=\"facts-table\"><div class=\"table-row\"><span class=\"table-label\">Beds</span><div class=\"table-value\">4</div></div><div class=\"table-row\"><span class=\"table-label\">Baths</span><div class=\"table-value\">4</div></div><div class=\"table-row\"><span class=\"table-label\">Sq. Ft.</span><div class=\"table-value\">3,210</div></div><div class=\"table-row\"><span class=\"table-label\">Stories</span><div class=\"table-value\">2</div></div><div class=\"table-row\"><span class=\"table-label\">Lot Size</span><div class=\"table-value\">—</div></div><div class=\"table-row\"><span class=\"table-label\">Style</span><div class=\"table-value\">Townhouse</div></div><div class=\"table-row\"><span class=\"table-label\">Year Built</span><div class=\"table-value\">2007</div></div><div class=\"table-row\"><span class=\"table-label\">Year Renovated</span><div class=\"table-value\">2007</div></div><div class=\"table-row\"><span class=\"table-label\">County</span><div class=\"table-value\">Collin County</div></div><div class=\"table-row\"><span class=\"table-label\">APN</span><div class=\"table-value\">R86530F601401</div></div></div><div class=\"source-info-container\"><div class=\"source-info\">Home facts updated by <!-- -->county records<!-- --> on <!-- -->Aug 25, 2018<!-- -->. </div></div></div></div></div></div>]"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 478,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "home_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-02T19:31:55.412263Z",
-     "start_time": "2018-10-02T19:31:52.407Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "schools[0]"
+    "all_info"
    ]
   },
   {
