updated Readme and some other fixes

--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "url_part_one = 'https://www.redfin.com/zipcode/'+zip_code+'/filter/sort=lo-days/'\n",
     "\n",
-    "if \n",
+    "if type_home==''\n",
     "\n",
     "if price<=50000:\n",
     "    url_part_two = ',max-price=75K'\n",
