--- a/src/Tester_file.ipynb
+++ b/src/Tester_file.ipynb
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-29T18:20:30.523024Z",
-     "start_time": "2018-09-29T18:20:30.512867Z"
+     "end_time": "2018-10-02T21:59:00.220070Z",
+     "start_time": "2018-10-02T21:59:00.208616Z"
     }
    },
    "outputs": [],
    "source": [
-    "# home_dict = dict()\n",
+    "home_dict = dict()\n",
     "\n",
     "# add_list = text.split(sep=' |')\n",
     "# zip_code = re.search('\\d+$', add_list[0])\n",
@@ -49,25 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-29T18:22:44.389120Z",
-     "start_time": "2018-09-29T18:22:44.378473Z"
+     "end_time": "2018-10-02T21:59:00.604885Z",
+     "start_time": "2018-10-02T21:59:00.591383Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Ortega (jose) Elementary SchoolPublic',\n",
-       " ' K to 5',\n",
-       " ' Serves this homeGreatSchools Rating: 7/10Parent Rating: ']"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'add_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c933bf29bc96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0madd_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'add_list' is not defined"
+     ]
     }
    ],
    "source": [
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-29T18:25:36.597414Z",
@@ -89,19 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-29T18:28:39.154457Z",
-     "start_time": "2018-09-29T18:28:39.144740Z"
+     "end_time": "2018-10-02T21:59:01.800540Z",
+     "start_time": "2018-10-02T21:59:01.787569Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ortega (jose) Elementary School\n"
+     "ename": "NameError",
+     "evalue": "name 'school' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-83a2b56e35af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mschool_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mschool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' •'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrating\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'(\\d+)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madd_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrating\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnum\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrating\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mschool_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madd_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m'Public'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mschool_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'school' is not defined"
      ]
     }
    ],
@@ -116,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-01T23:05:24.885147Z",
-     "start_time": "2018-10-01T23:05:23.496286Z"
+     "end_time": "2018-10-02T21:59:03.323910Z",
+     "start_time": "2018-10-02T21:59:02.496158Z"
     }
    },
    "outputs": [
@@ -128,8 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input home link: boigfa\n",
-      "boigfa\n"
+      "Please input home link: \n"
      ]
     }
    ],
@@ -139,41 +141,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-01T23:25:04.093816Z",
-     "start_time": "2018-10-01T23:25:04.084283Z"
+     "end_time": "2018-10-02T21:59:03.950249Z",
+     "start_time": "2018-10-02T21:59:03.938042Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-1c0ef39dd125>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+     ]
+    }
+   ],
    "source": [
     "b = random.uniform(2,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-01T23:25:04.241327Z",
-     "start_time": "2018-10-01T23:25:04.229711Z"
+     "end_time": "2018-10-02T21:59:04.519526Z",
+     "start_time": "2018-10-02T21:59:04.507126Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-89e6c98d9288>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'b' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-02T21:59:05.502986Z",
+     "start_time": "2018-10-02T21:59:05.494976Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "home_dict['redfin_est'] = float(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-02T21:59:55.533139Z",
+     "start_time": "2018-10-02T21:59:55.520061Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.588436069107048"
+       "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "home_dict['redfin_est']>1"
    ]
   },
   {
