scrapper can create df of sold home features

--- a/src/Tester_file.ipynb
+++ b/src/Tester_file.ipynb
@@ -232,6 +232,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-03T00:36:54.469391Z",
+     "start_time": "2018-10-03T00:36:53.982261Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
