--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 774,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T00:48:31.051113Z",
-     "start_time": "2018-10-03T00:48:31.033700Z"
+     "end_time": "2018-10-03T04:51:32.359230Z",
+     "start_time": "2018-10-03T04:51:32.338852Z"
     }
    },
    "outputs": [],
@@ -21,19 +21,19 @@
     "from urllib.error import HTTPError, URLError\n",
     "from itertools import cycle \n",
     "from header_list import user_agent_list\n",
-    "from proxies_list import proxies_list_, proxie_random_pool\n",
-    "from FUNCTIONS import proxie_check, strip_count, gen_url_list\n",
-    "from SCRAPPER_FUNCTIONS import session_creator, zip_prop_count, each_page, links_for_props\n",
-    "from MAIN_FUNCTIONS import address_parser, top_info_parser, public_info_parser, school_parser, feats_parser"
+    "from proxies_list import *\n",
+    "from INITIAL_SCRAPPER_FUNCTIONS import *\n",
+    "from LIST_DF_FUNCTIONS import *\n",
+    "from PARSER_FUNCTIONS import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 776,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T00:42:07.787125Z",
-     "start_time": "2018-10-03T00:42:07.767179Z"
+     "end_time": "2018-10-03T04:59:32.662420Z",
+     "start_time": "2018-10-03T04:59:32.648259Z"
     }
    },
    "outputs": [],
@@ -41,16 +41,16 @@
     "ua = user_agent_list\n",
     "proxies = proxies_list_\n",
     "prx_pool = proxie_random_pool\n",
-    "# proxies = proxie_check(proxies)"
+    "#proxies = proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 777,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T00:42:08.369624Z",
-     "start_time": "2018-10-03T00:42:08.349704Z"
+     "end_time": "2018-10-03T04:59:33.507899Z",
+     "start_time": "2018-10-03T04:59:33.492262Z"
     },
     "scrolled": true
    },
@@ -58,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "60"
+       "56"
       ]
      },
-     "execution_count": 740,
+     "execution_count": 777,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
    },
    "outputs": [],
    "source": [
-    "def each_property(url, hdr, proxy):\n",
+    "def info_from_sold_property(url, hdr, proxy):\n",
     "\n",
     "    soup = session_creator(proxy, ua, url)\n",
     "\n",
@@ -232,10 +232,11 @@
     "    school_dict = school_parser(soup)\n",
     "\n",
     "    all_home_feats = feats_parser(soup)\n",
-    "    \n",
+    "\n",
     "    df = pd.DataFrame()\n",
-    "    \n",
-    "    df = pd.concat([home_dict, top_info_dict, top_info_dict, public_info_dict, all_home_feats], axis=1)\n",
+    "\n",
+    "    df = pd.concat([home_dict, top_info_dict, top_info_dict,\n",
+    "                    public_info_dict, all_home_feats], axis=1)\n",
     "\n",
     "    return df"
    ]
@@ -273,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 767,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T01:21:00.605374Z",
-     "start_time": "2018-10-03T01:21:00.569418Z"
+     "end_time": "2018-10-03T04:02:48.488065Z",
+     "start_time": "2018-10-03T04:02:48.457500Z"
     }
    },
    "outputs": [
@@ -377,7 +378,7 @@
        "[1 rows x 75 columns]"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 767,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,6 +386,60 @@
    "source": [
     "sold_home_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 772,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-03T04:42:27.556564Z",
+     "start_time": "2018-10-03T04:42:27.530820Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
