--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 778,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T04:51:32.359230Z",
-     "start_time": "2018-10-03T04:51:32.338852Z"
+     "end_time": "2018-10-03T19:22:13.425128Z",
+     "start_time": "2018-10-03T19:22:13.402860Z"
     }
    },
    "outputs": [],
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 787,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T04:59:32.662420Z",
-     "start_time": "2018-10-03T04:59:32.648259Z"
+     "end_time": "2018-10-03T20:52:59.145422Z",
+     "start_time": "2018-10-03T20:52:59.128312Z"
     }
    },
    "outputs": [],
@@ -41,16 +41,16 @@
     "ua = user_agent_list\n",
     "proxies = proxies_list_\n",
     "prx_pool = proxie_random_pool\n",
-    "#proxies = proxie_check(proxies)"
+    "# proxies = proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 788,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T04:59:33.507899Z",
-     "start_time": "2018-10-03T04:59:33.492262Z"
+     "end_time": "2018-10-03T20:53:03.712936Z",
+     "start_time": "2018-10-03T20:53:03.691764Z"
     },
     "scrolled": true
    },
@@ -58,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "56"
+       "53"
       ]
      },
-     "execution_count": 777,
+     "execution_count": 788,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,11 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 785,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T01:21:00.567538Z",
-     "start_time": "2018-10-03T01:20:57.597194Z"
+     "end_time": "2018-10-03T19:42:16.204070Z",
+     "start_time": "2018-10-03T19:42:14.114409Z"
     }
    },
    "outputs": [
@@ -255,8 +255,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.38.69.254:52168\n",
-      "https://www.redfin.com/CA/Santa-Rosa/2051-Gardenview-Pl-95403/home/2640288\n"
+      "192.0.10.186:51886\n",
+      "https://www.redfin.com/DC/Washington/1329-Jefferson-St-NW-20011/home/10024452\n"
      ]
     }
    ],
@@ -274,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 786,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T04:02:48.488065Z",
-     "start_time": "2018-10-03T04:02:48.457500Z"
+     "end_time": "2018-10-03T19:42:16.244743Z",
+     "start_time": "2018-10-03T19:42:16.205933Z"
     }
    },
    "outputs": [
@@ -314,71 +314,71 @@
        "      <th>home_sqft</th>\n",
        "      <th>yr_blt</th>\n",
        "      <th>...</th>\n",
-       "      <th>Property Subtype 1:</th>\n",
-       "      <th>Style:</th>\n",
-       "      <th>Age:</th>\n",
-       "      <th>Year Built:</th>\n",
+       "      <th>Tax Year:</th>\n",
+       "      <th>Tax Annual Amount:</th>\n",
+       "      <th>Total Taxes Payment Frequency:</th>\n",
+       "      <th>Year Assessed:</th>\n",
+       "      <th>Ownership Interest:</th>\n",
        "      <th>Year Built Source:</th>\n",
-       "      <th>Square Footage:</th>\n",
-       "      <th>Planned Unit Develop:</th>\n",
-       "      <th>Property Disclaimer:</th>\n",
-       "      <th>Original Price:</th>\n",
-       "      <th>Sale/Lease-Rent:</th>\n",
+       "      <th>Construction Materials:</th>\n",
+       "      <th>Structure Type:</th>\n",
+       "      <th>Tidal Water:</th>\n",
+       "      <th>Soil Types:</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2051 Gardenview Pl</td>\n",
-       "      <td>Santa Rosa</td>\n",
-       "      <td>95403</td>\n",
+       "      <td>1329 JEFFERSON St NW</td>\n",
+       "      <td>WASHINGTON</td>\n",
+       "      <td>20011</td>\n",
        "      <td>None</td>\n",
-       "      <td>Enjoy Sonoma County living in this beautifully...</td>\n",
-       "      <td>21818180</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>872.0</td>\n",
-       "      <td>2000</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>1001718358</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>826.0</td>\n",
+       "      <td>1923</td>\n",
        "      <td>...</td>\n",
-       "      <td>Single Family Residence</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>Realist Public Rec</td>\n",
-       "      <td>2,872</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Information has not been verified, is not guar...</td>\n",
-       "      <td>995000.00</td>\n",
-       "      <td>Sale</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>$5,337.48</td>\n",
+       "      <td>Annually</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Fee Simple</td>\n",
+       "      <td>Estimated</td>\n",
+       "      <td>Shingle Siding</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Urban Land-Sassafras-Chillum</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 75 columns</p>\n",
+       "<p>1 rows × 66 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              address         city zip_code state  \\\n",
-       "1  2051 Gardenview Pl   Santa Rosa    95403  None   \n",
+       "                address         city zip_code state description     mls_num  \\\n",
+       "1  1329 JEFFERSON St NW   WASHINGTON    20011  None         N/A  1001718358   \n",
        "\n",
-       "                                         description   mls_num  num_beds  \\\n",
-       "1  Enjoy Sonoma County living in this beautifully...  21818180       4.0   \n",
+       "   num_beds  num_baths  home_sqft  yr_blt              ...               \\\n",
+       "1       5.0        2.5      826.0    1923              ...                \n",
        "\n",
-       "   num_baths  home_sqft  yr_blt        ...             Property Subtype 1:   \\\n",
-       "1        3.0      872.0    2000        ...          Single Family Residence   \n",
+       "  Tax Year:   Tax Annual Amount:   Total Taxes Payment Frequency:   \\\n",
+       "1       2017            $5,337.48                         Annually   \n",
        "\n",
-       "   Style:   Age:   Year Built:   Year Built Source:   Square Footage:   \\\n",
-       "1  Unknown      0          2000   Realist Public Rec             2,872   \n",
+       "   Year Assessed:   Ownership Interest:   Year Built Source:   \\\n",
+       "1             2017            Fee Simple            Estimated   \n",
        "\n",
-       "   Planned Unit Develop:                               Property Disclaimer:   \\\n",
-       "1                     Yes  Information has not been verified, is not guar...   \n",
+       "   Construction Materials:  Structure Type:   Tidal Water:   \\\n",
+       "1            Shingle Siding         Detached             No   \n",
        "\n",
-       "   Original Price:   Sale/Lease-Rent:   \n",
-       "1         995000.00               Sale  \n",
+       "                   Soil Types:   \n",
+       "1  Urban Land-Sassafras-Chillum  \n",
        "\n",
-       "[1 rows x 75 columns]"
+       "[1 rows x 66 columns]"
       ]
      },
-     "execution_count": 767,
+     "execution_count": 786,
      "metadata": {},
      "output_type": "execute_result"
     }
