--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T22:06:58.476724Z",
-     "start_time": "2018-10-03T22:06:58.462910Z"
+     "end_time": "2018-10-04T00:55:54.463027Z",
+     "start_time": "2018-10-04T00:55:54.444878Z"
     }
    },
    "outputs": [],
@@ -25,6 +25,7 @@
     "from INITIAL_SCRAPPER_FUNCTIONS import *\n",
     "from PARSER_FUNCTIONS import *\n",
     "from LIST_DF_FUNCTIONS import *\n",
+    "from SEARCH_URL_GEN import *\n",
     "ua = user_agent_list\n",
     "proxies = proxies_list_"
    ]
@@ -83,13 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
@@ -99,42 +93,43 @@
    },
    "outputs": [],
    "source": [
-    "zip_code = int(customer_df['zip'].values)\n",
-    "city = str(customer_df['city'].values)\n",
-    "price = float(customer_df['price'].values)\n",
-    "sqft = int(customer_df['sqft'].values)\n",
-    "num_bds = int(customer_df['num_bds'].values)\n",
-    "num_bths = float(customer_df['num_bths'].values)\n",
-    "lot_sqft = int(customer_df['lot_sf'].values)\n",
-    "yr_blt = int(customer_df['yr_blt'].values)\n",
-    "hoa = customer_df['HOA'].values\n",
-    "hoa_fee = float(customer_df['HOA_fee'].values)\n",
-    "type_home = (customer_df['home_type'].values)\n",
+    "def gen_url(customer_df):\n",
+    "    zip_code = int(customer_df['zip'].values)\n",
+    "    city = str(customer_df['city'].values)\n",
+    "    type_home = (customer_df['home_type'].values)\n",
+    "    price = float(customer_df['price'].values)\n",
+    "    num_bds = int(customer_df['num_bds'].values)\n",
+    "    num_bths = float(customer_df['num_bths'].values)\n",
+    "    sqft = int(customer_df['sqft'].values)\n",
+    "    yr_blt = int(customer_df['yr_blt'].values)\n",
+    "    lot_sqft = int(customer_df['lot_sf'].values)\n",
+    "    hoa = customer_df['HOA'].values\n",
+    "    hoa_fee = float(customer_df['HOA_fee'].values)\n",
     "\n",
+    "    url_part_one = 'https://www.redfin.com/zipcode/' + \\\n",
+    "        str(zip_code) + '/filter/sort=lo-days/'\n",
     "\n",
-    "url_part_one = 'https://www.redfin.com/zipcode/' + \\\n",
+    "    url_part_two = search_url_part_two_gen(type_home)\n",
     "\n",
-    "url_part_two = search_url_part_two_gen(type_home)\n",
+    "    url_part_three = search_url_part_three_gen(price)\n",
     "\n",
-    "url_part_three = search_url_part_three_gen(price)\n",
+    "    url_part_four = search_url_part_four_gen(num_bds)\n",
     "\n",
-    "url_part_four = search_url_part_four_gen(sqft)\n",
+    "    url_part_five = search_url_part_five_gen(num_bths)\n",
     "\n",
-    "url_part_five = search_url_part_five_gen(sqft)\n",
+    "    url_part_six = search_url_part_six_gen(sqft)\n",
     "\n",
-    "url_part_six = search_url_part_six_gen(sqft)\n",
+    "    url_part_seven = search_url_part_seven_gen(yr_blt)\n",
     "\n",
-    "url_part_seven = search_url_part_seven_gen(sqft)\n",
+    "    url_part_eight = search_url_part_eight_gen(lot_sqft)\n",
     "\n",
-    "search_url = url_part_one + url_part_two + url_part_three + \\\n",
-    "    url_part_four + url_part_five + url_part_six + url_part_seven\n",
+    "    url_part_nine = search_url_part_nine_gen(hoa)\n",
     "\n",
-    "min-year-built =\n",
-    "1960\n",
-    ", min-lot-size =\n",
-    "6.5k-sqft\n",
-    ", hoa =\n",
-    "400"
+    "    search_url = url_part_one + url_part_two + url_part_three + \\\n",
+    "        url_part_four + url_part_five + url_part_six + \\\n",
+    "        url_part_seven + url_part_eight + url_part_nine\n",
+    "\n",
+    "    return search_url"
    ]
   },
   {
@@ -155,6 +150,18 @@
     "#     active_df = each_property(url, header, proxy)\n",
     "# return active_df[0:2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T00:05:27.725219Z",
+     "start_time": "2018-10-04T00:05:27.709316Z"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
