--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T00:55:54.463027Z",
-     "start_time": "2018-10-04T00:55:54.444878Z"
+     "end_time": "2018-10-04T00:58:24.517199Z",
+     "start_time": "2018-10-04T00:58:24.500003Z"
     }
    },
    "outputs": [],
@@ -26,6 +26,7 @@
     "from PARSER_FUNCTIONS import *\n",
     "from LIST_DF_FUNCTIONS import *\n",
     "from SEARCH_URL_GEN import *\n",
+    "from GET_SEARCH_URL import *\n",
     "ua = user_agent_list\n",
     "proxies = proxies_list_"
    ]
